--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@
 *
 * ======================================================= */
 body {
+
   font-family: "Open Sans", Arial, sans-serif;
   line-height: 1.6;
   font-size: 16px;
@@ -318,19 +319,25 @@ figure {
   background: #fff; }
 
 .nav-header {
-  position: relative;
+  /* position: relative; */
   float: left;
-  width: 100%; }
+  width: 100%;
+
+  }
+
+
+
 
 #fh5co-logo {
   position: relative;
-  z-index: 2;
+  /* z-index: 2; */
   font-size: 28px;
   text-transform: uppercase;
-  margin-top: 35px;
+  /* margin-top: 35px; */
   font-weight: 700;
-  float: left;
-  padding-left: 40px; }
+  /* float: left; */
+
+                    }
 #fh5co-logo i {
   position: absolute;
   top: 0;
@@ -351,10 +358,10 @@ figure {
   font-weight: 300; }
 
 #fh5co-menu-wrap {
-  position: relative;
+  /* position: relative; */
   z-index: 5;
-  display: block;
-  float: right;
+  /* display: block;
+  float: right; */
   margin-top: 15px; }
 #fh5co-menu-wrap .sf-menu a {
   padding: 1em .75em; }
@@ -1390,8 +1397,8 @@ div.cs-select span {
 
 
 .div-custom{
-  height: 250px !important;
-  
+  height: 300px !important;
+
   /*margin-bottom:;*/
 }
 
@@ -1521,7 +1528,7 @@ div.cs-select span {
   border-radius: 50%;
   width: 18px;
   margin-bottom: 0em;
-  height: 18px; 
+  height: 18px;
 }
 
 .carousel-indicators .active {
